--- a/src/Services/Vehicle/Vehicle.API/appsettings.json
+++ b/src/Services/Vehicle/Vehicle.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
