--- a/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
+++ b/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>70535bdd-6d57-4e8e-b90b-4036ee7a250e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
