--- a/src/Services/Vehicle/Vehicle.API/appsettings.json
+++ b/src/Services/Vehicle/Vehicle.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=admin;Password=admin1234;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
