Add parking feature, refactor vehicle creation, remove controllers
Updated GlobalUsing.cs with new namespaces.
Removed PricingController.cs and WeatherForecastController.cs.
Updated Parking.API.csproj to disable nullable types and add references.
Enhanced Program.cs with PostgreSQL, DI, FluentValidation, caching, and Serilog.
Updated appsettings.json with connection strings and Serilog config.
Renamed LicensePlate to PlateNumber in CreateVehicleEndpoint.cs and CreateVehicleHandler.cs.
Added event publishing for VehicleCreatedEvent.
Introduced IEventPublisher and VehicleCreatedEvent.
Added ExceptionHandlingMiddleware and ExceptionMiddlewareExtensions.
Added IValidatable and ValidatorService.
Added ParkingController, ApplicationDbContext, and DTOs for parking.
Defined entities for ParkingSpot and ParkingZone.
Implemented IParkingRepository, ParkingRepository, IParkingService, ParkingService, IUnitOfWork, and UnitOfWork.

--- a/src/Services/Parking/Parking.API/Parking.API.csproj
+++ b/src/Services/Parking/Parking.API/Parking.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>f93ef688-7882-4e00-9818-d969a91ebac9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -10,12 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\DTOs\" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
   </ItemGroup>
 
 </Project>
