--- a/src/Services/Parking/Parking.API/appsettings.json
+++ b/src/Services/Parking/Parking.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ParkingDb;User Id=admin;Password=admin1234;Include Error Detail=true",
+    "Redis": "redis:6379"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
