Update Docker and project configurations for Parking API
- Expose port 8081 in Dockerfile and add BuildingBlocks reference
- Remove MapsterMapper from GlobalUsing.cs
- Add DockerComposeProjectPath to Parking.API.csproj
- Remove IMapper dependency from ParkingService.cs
- Change PostgreSQL port to 5433 in appsettings.json
- Add BuildingBlocks.Events and IEventPublisher singleton in Program.cs
- Update docker-compose.dcproj with new launch action and service name
- Add parkingdb, redis, and parking.api configs in docker-compose files
- Update launchSettings.json for parking.api service action
- Add Dockerfile.original with build and publish stages

--- a/src/Services/Parking/Parking.API/Parking.API.csproj
+++ b/src/Services/Parking/Parking.API/Parking.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>f93ef688-7882-4e00-9818-d969a91ebac9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
