--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -12,6 +12,24 @@ services:
       - "5432:5432"
     volumes:
       - postgres_vehicle:/var/lib/postgresql/data
+ 
+  parkingdb:
+    container_name: parkingdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=ParkingDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_parking:/var/lib/postgresql/data
+
+  redis:
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
 
   vehicle.api:
     environment:
@@ -24,6 +42,23 @@ services:
     ports:
       - "6000:8080"
       - "6060:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  parking.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=parkingdb;Port=5433;Database=ParkingDb;User Id=admin;Password=admin1234;
+      - ConnectionStrings__Redis=redis:6379;
+    depends_on:
+      - parkingdb
+      - redis
+    ports:
+      - "6001:8080"
+      - "6061:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
