--- a/src/Services/Parking/Parking.API/appsettings.json
+++ b/src/Services/Parking/Parking.API/appsettings.json
@@ -3,6 +3,11 @@
     "DefaultConnection": "Server=localhost;Port=5433;Database=ParkingDb;User Id=admin;Password=admin1234;Include Error Detail=true",
     "Redis": "redis:6379"
   },
+  "MassTransit": {
+    "Host": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo": [
