--- a/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
+++ b/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="Carter" Version="8.2.1" />
     <PackageReference Include="Marten" Version="7.28.0" />
+    <PackageReference Include="MassTransit" Version="8.2.5" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
