--- a/src/Services/Vehicle/Vehicle.API/appsettings.json
+++ b/src/Services/Vehicle/Vehicle.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=admin;Password=admin1234;Include Error Detail=true"
   },
+  "MassTransit": {
+    "Host": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
