--- a/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
+++ b/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="MassTransit" Version="8.2.5" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Polly" Version="8.4.1" />
   </ItemGroup>
 
   <ItemGroup>
