Switch from PostgreSQL to SQL Server
Updated `Parking.API.csproj` to include `Microsoft.EntityFrameworkCore.SqlServer` package. Modified `Program.cs` to configure the database context for SQL Server using environment variables. Changed `appsettings.json` to update the `DefaultConnection` string for SQL Server.

Updated `docker-compose.override.yml` and `docker-compose.yml` to switch `parkingdb` service to SQL Server image, adjust environment variables, port mapping, and add a new network `parking-network`. Added volume definitions for `postgres_vehicle` and `mssql_parking`.

Added new migration files to create initial database schema for SQL Server, defining `ParkingZones` and `ParkingSpots` tables with relationships and seed data.

--- a/src/Services/Parking/Parking.API/appsettings.json
+++ b/src/Services/Parking/Parking.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ParkingDb;User Id=admin;Password=admin1234;Include Error Detail=true",
+    "DefaultConnection": "Server=localhost;Database=ParkingDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;",
     "Redis": "redis:6379"
   },
   "MassTransit": {
