Switch to Redis for distributed caching
Replaced IMemoryCache with IDistributedCache across the codebase to use Redis for caching. Updated ParkingResponseDto to include PlateNumber. Corrected environment variable names for connection strings. Configured Redis caching in Program.cs and added necessary package references. Adjusted CreateVehicleEndpoint and CreateVehicleHandler to handle new caching mechanism and response structure. Updated appsettings.json and docker-compose.override.yml for Redis configuration.

--- a/src/Services/Vehicle/Vehicle.API/appsettings.json
+++ b/src/Services/Vehicle/Vehicle.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=admin;Password=admin1234;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5432;Database=VehicleDb;User Id=admin;Password=admin1234;Include Error Detail=true",
+    "Redis": "redis:6379"
   },
   "MassTransit": {
     "Host": "rabbitmq",
