--- a/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
+++ b/src/Services/Vehicle/Vehicle.API/Vehicle.API.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Marten" Version="7.28.0" />
     <PackageReference Include="MassTransit" Version="8.2.5" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Polly" Version="8.4.1" />
   </ItemGroup>
