Refactor services, update configs, and add migrations
Refactored ParkingService and PricingRequestConsumer to include error handling and retry logic using Polly. Updated Program.cs to add middleware for global exception handling and configuration for MassTransit and Redis caching. Modified ParkingController to return async results. Added and removed migration files for ParkingZones and ParkingSpots tables. Updated appsettings.json with Redis and MassTransit connection strings. Added pricing.api service configuration to docker-compose files. Updated global usings and removed unused usings. Updated application URLs in launchSettings.json.

--- a/src/Services/Pricing/Pricing.API/appsettings.json
+++ b/src/Services/Pricing/Pricing.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "Redis": "redis:6379"
+  },
+  "MassTransit": {
+    "Host": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
