--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -86,6 +86,24 @@ services:
     networks:
       - parking-network
 
+  pricing.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Redis=redis:6379
+    depends_on:
+      - redis
+      - rabbitmq
+    ports:
+      - "6002:8080"
+      - "6062:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+    networks:
+      - parking-network
+
 volumes:
   postgres_vehicle:
   mssql_parking:
